Fix #100: alignment of close icon with iframe

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -389,7 +389,8 @@ button::-moz-focus-inner {
   }
   .mfp-iframe-scaler iframe {
     position: absolute;
-    top: -3px;
+    display: block;
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
@@ -397,7 +398,7 @@ button::-moz-focus-inner {
     background: $iframe-background;
   }
   .mfp-iframe-holder .mfp-close {
-    top: -43px;
+    top: -40px;
   }
 }
 
